--- a/Liarodon/Accounts/AccountsTableViewCell.xib
+++ b/Liarodon/Accounts/AccountsTableViewCell.xib
@@ -5,20 +5,67 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="82" id="KGk-i7-Jjw" customClass="AccountsTableViewCell" customModule="Liarodon" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="82"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="KGk-i7-Jjw" customClass="AccountsTableViewCell" customModule="Liarodon" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="81.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
                 <autoresizingMask key="autoresizingMask"/>
-                <color key="backgroundColor" red="0.94117647059999998" green="0.050980392159999999" blue="0.3294117647" alpha="0.19736716360000001" colorSpace="calibratedRGB"/>
+                <subviews>
+                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5EQ-mX-pGI" userLabel="Size View">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="80" id="wTp-K8-7IK"/>
+                        </constraints>
+                    </view>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ygy-5l-xNY">
+                        <rect key="frame" x="15" y="15" width="50" height="50"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="ygy-5l-xNY" secondAttribute="height" multiplier="1:1" id="4as-et-VLo"/>
+                            <constraint firstAttribute="height" constant="50" id="KML-nD-OBR"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cnP-gU-4R7">
+                        <rect key="frame" x="80" y="19" width="44" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lxs-Gg-Dde">
+                        <rect key="frame" x="80" y="40" width="39.5" height="19.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                <constraints>
+                    <constraint firstItem="lxs-Gg-Dde" firstAttribute="top" secondItem="ygy-5l-xNY" secondAttribute="centerY" id="0yN-ZO-pDa"/>
+                    <constraint firstAttribute="trailing" secondItem="5EQ-mX-pGI" secondAttribute="trailing" id="5ch-k7-Qgz"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="5EQ-mX-pGI" secondAttribute="bottom" id="DMG-xK-K9L"/>
+                    <constraint firstItem="cnP-gU-4R7" firstAttribute="leading" secondItem="ygy-5l-xNY" secondAttribute="trailing" constant="15" id="IVD-oY-jaF"/>
+                    <constraint firstItem="5EQ-mX-pGI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="PvK-bq-vca"/>
+                    <constraint firstItem="5EQ-mX-pGI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="YaG-oO-gw2"/>
+                    <constraint firstItem="cnP-gU-4R7" firstAttribute="bottom" secondItem="ygy-5l-xNY" secondAttribute="centerY" id="YiH-hS-aR8"/>
+                    <constraint firstItem="lxs-Gg-Dde" firstAttribute="leading" secondItem="ygy-5l-xNY" secondAttribute="trailing" constant="15" id="c1b-ll-PNx"/>
+                    <constraint firstItem="ygy-5l-xNY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="nUg-bf-7il"/>
+                    <constraint firstItem="ygy-5l-xNY" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="wMA-Sn-oja"/>
+                </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="34" y="46"/>
+            <connections>
+                <outlet property="acctLabel" destination="lxs-Gg-Dde" id="AwJ-Zf-md1"/>
+                <outlet property="avatarImageView" destination="ygy-5l-xNY" id="a5n-IZ-A7f"/>
+                <outlet property="displayNameLabel" destination="cnP-gU-4R7" id="VXe-gB-BzR"/>
+            </connections>
+            <point key="canvasLocation" x="34" y="45"/>
         </tableViewCell>
     </objects>
 </document>
