--- a/Liarodon/Accounts/AccountsTableViewCell.xib
+++ b/Liarodon/Accounts/AccountsTableViewCell.xib
@@ -19,53 +19,72 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5EQ-mX-pGI" userLabel="Size View">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5EQ-mX-pGI" userLabel="Size View">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ygy-5l-xNY">
+                                <rect key="frame" x="15" y="15" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ygy-5l-xNY" secondAttribute="height" multiplier="1:1" id="4as-et-VLo"/>
+                                    <constraint firstAttribute="height" constant="50" id="KML-nD-OBR"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="cnP-gU-4R7">
+                                <rect key="frame" x="80" y="19" width="44" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="lxs-Gg-Dde">
+                                <rect key="frame" x="80" y="40" width="39.5" height="19.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vHy-pg-9er">
+                                <rect key="frame" x="277" y="26" width="28" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="vHy-pg-9er" secondAttribute="height" multiplier="1:1" id="g7U-mb-oc9"/>
+                                    <constraint firstAttribute="height" constant="28" id="mrB-xd-edV"/>
+                                </constraints>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" image="follow"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="80" id="wTp-K8-7IK"/>
+                            <constraint firstItem="vHy-pg-9er" firstAttribute="centerY" secondItem="5EQ-mX-pGI" secondAttribute="centerY" id="1ye-1M-ejw"/>
+                            <constraint firstItem="cnP-gU-4R7" firstAttribute="leading" secondItem="ygy-5l-xNY" secondAttribute="trailing" constant="15" id="8Oz-Sy-yZD"/>
+                            <constraint firstItem="ygy-5l-xNY" firstAttribute="centerY" secondItem="5EQ-mX-pGI" secondAttribute="centerY" id="C2G-qw-mMx"/>
+                            <constraint firstItem="cnP-gU-4R7" firstAttribute="bottom" secondItem="ygy-5l-xNY" secondAttribute="centerY" id="CCJ-2o-Dok"/>
+                            <constraint firstItem="vHy-pg-9er" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="lxs-Gg-Dde" secondAttribute="trailing" constant="15" id="FAQ-Dc-sE0"/>
+                            <constraint firstItem="ygy-5l-xNY" firstAttribute="leading" secondItem="5EQ-mX-pGI" secondAttribute="leading" constant="15" id="FaN-d4-4IS"/>
+                            <constraint firstItem="lxs-Gg-Dde" firstAttribute="top" secondItem="ygy-5l-xNY" secondAttribute="centerY" id="IYG-ID-vaR"/>
+                            <constraint firstItem="lxs-Gg-Dde" firstAttribute="leading" secondItem="ygy-5l-xNY" secondAttribute="trailing" constant="15" id="KKF-Nw-3ET"/>
+                            <constraint firstItem="vHy-pg-9er" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="cnP-gU-4R7" secondAttribute="trailing" constant="15" id="jH5-dB-Ccs"/>
+                            <constraint firstAttribute="trailing" secondItem="vHy-pg-9er" secondAttribute="trailing" constant="15" id="w1h-7C-VPO"/>
+                            <constraint firstAttribute="height" priority="999" constant="80" id="wTp-K8-7IK"/>
                         </constraints>
                     </view>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ygy-5l-xNY">
-                        <rect key="frame" x="15" y="15" width="50" height="50"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="ygy-5l-xNY" secondAttribute="height" multiplier="1:1" id="4as-et-VLo"/>
-                            <constraint firstAttribute="height" constant="50" id="KML-nD-OBR"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cnP-gU-4R7">
-                        <rect key="frame" x="80" y="19" width="44" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lxs-Gg-Dde">
-                        <rect key="frame" x="80" y="40" width="39.5" height="19.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstItem="lxs-Gg-Dde" firstAttribute="top" secondItem="ygy-5l-xNY" secondAttribute="centerY" id="0yN-ZO-pDa"/>
                     <constraint firstAttribute="trailing" secondItem="5EQ-mX-pGI" secondAttribute="trailing" id="5ch-k7-Qgz"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="5EQ-mX-pGI" secondAttribute="bottom" id="DMG-xK-K9L"/>
-                    <constraint firstItem="cnP-gU-4R7" firstAttribute="leading" secondItem="ygy-5l-xNY" secondAttribute="trailing" constant="15" id="IVD-oY-jaF"/>
                     <constraint firstItem="5EQ-mX-pGI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="PvK-bq-vca"/>
                     <constraint firstItem="5EQ-mX-pGI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="YaG-oO-gw2"/>
-                    <constraint firstItem="cnP-gU-4R7" firstAttribute="bottom" secondItem="ygy-5l-xNY" secondAttribute="centerY" id="YiH-hS-aR8"/>
-                    <constraint firstItem="lxs-Gg-Dde" firstAttribute="leading" secondItem="ygy-5l-xNY" secondAttribute="trailing" constant="15" id="c1b-ll-PNx"/>
-                    <constraint firstItem="ygy-5l-xNY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="nUg-bf-7il"/>
-                    <constraint firstItem="ygy-5l-xNY" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="wMA-Sn-oja"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="acctLabel" destination="lxs-Gg-Dde" id="AwJ-Zf-md1"/>
                 <outlet property="avatarImageView" destination="ygy-5l-xNY" id="a5n-IZ-A7f"/>
                 <outlet property="displayNameLabel" destination="cnP-gU-4R7" id="VXe-gB-BzR"/>
+                <outlet property="followUnfollowButton" destination="vHy-pg-9er" id="ksH-th-yv8"/>
             </connections>
             <point key="canvasLocation" x="34" y="45"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="follow" width="240" height="240"/>
+    </resources>
 </document>
