--- a/Liarodon/Timeline/Timeline.storyboard
+++ b/Liarodon/Timeline/Timeline.storyboard
@@ -325,6 +325,49 @@
                                     <constraint firstItem="OpX-fa-CDa" firstAttribute="leading" secondItem="O8S-Yu-taQ" secondAttribute="trailing" constant="8" id="wrg-Rt-AfR"/>
                                 </constraints>
                             </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="sG3-Sg-bvW">
+                                <rect key="frame" x="0.0" y="495" width="375" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="DI3-bP-eZV"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Ybp-0L-wPX">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageCell" id="BMn-7M-nvz">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kSe-uy-A3X">
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="❌" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cw4-PN-yky">
+                                                    <rect key="frame" x="94" y="11" width="23" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="kSe-uy-A3X" firstAttribute="leading" secondItem="BMn-7M-nvz" secondAttribute="leading" id="i22-ui-vbM"/>
+                                            <constraint firstItem="kSe-uy-A3X" firstAttribute="top" secondItem="BMn-7M-nvz" secondAttribute="top" id="jbK-Z3-RU6"/>
+                                            <constraint firstItem="cw4-PN-yky" firstAttribute="top" secondItem="BMn-7M-nvz" secondAttribute="topMargin" constant="3" id="o1r-xf-O6w"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="cw4-PN-yky" secondAttribute="trailing" constant="3" id="vEZ-nB-LJs"/>
+                                            <constraint firstAttribute="trailing" secondItem="kSe-uy-A3X" secondAttribute="trailing" id="wbr-mk-csD"/>
+                                            <constraint firstAttribute="bottom" secondItem="kSe-uy-A3X" secondAttribute="bottom" id="xBh-QG-dt5"/>
+                                        </constraints>
+                                        <size key="customSize" width="128" height="128"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -333,6 +376,8 @@
                             <constraint firstItem="1su-m0-ZGl" firstAttribute="top" secondItem="J9f-B6-ecK" secondAttribute="bottom" id="F3v-zA-aOh"/>
                             <constraint firstItem="yBO-9J-ysH" firstAttribute="leading" secondItem="sg9-Ws-uBC" secondAttribute="leading" id="FmU-yT-zRf"/>
                             <constraint firstItem="J9f-B6-ecK" firstAttribute="leading" secondItem="sg9-Ws-uBC" secondAttribute="leading" id="Jie-sH-tQq"/>
+                            <constraint firstAttribute="trailing" secondItem="sG3-Sg-bvW" secondAttribute="trailing" id="KzN-Fj-aaj"/>
+                            <constraint firstItem="sG3-Sg-bvW" firstAttribute="leading" secondItem="sg9-Ws-uBC" secondAttribute="leading" id="LkV-yU-plf"/>
                             <constraint firstAttribute="trailing" secondItem="1su-m0-ZGl" secondAttribute="trailing" id="Ndm-w7-hgv"/>
                             <constraint firstAttribute="trailingMargin" secondItem="SGu-nc-zQi" secondAttribute="trailing" id="NxK-Mx-5jZ"/>
                             <constraint firstItem="J9f-B6-ecK" firstAttribute="top" secondItem="sg9-Ws-uBC" secondAttribute="top" id="OYB-MP-89A"/>
@@ -340,6 +385,7 @@
                             <constraint firstAttribute="trailing" secondItem="J9f-B6-ecK" secondAttribute="trailing" id="St3-eV-E2v"/>
                             <constraint firstItem="MPu-wA-5so" firstAttribute="top" secondItem="SGu-nc-zQi" secondAttribute="bottom" constant="6" id="W1C-fq-7BX"/>
                             <constraint firstItem="JKt-UL-5wo" firstAttribute="top" secondItem="sg9-Ws-uBC" secondAttribute="topMargin" constant="18" id="WQe-xU-bGn"/>
+                            <constraint firstItem="yBO-9J-ysH" firstAttribute="top" secondItem="sG3-Sg-bvW" secondAttribute="bottom" id="YWg-hF-1kv"/>
                             <constraint firstItem="JKt-UL-5wo" firstAttribute="leading" secondItem="sg9-Ws-uBC" secondAttribute="leadingMargin" id="ZzF-YI-43I"/>
                             <constraint firstItem="AiL-g7-kk6" firstAttribute="top" secondItem="yBO-9J-ysH" secondAttribute="bottom" id="bF9-8u-mu7"/>
                             <constraint firstItem="SGu-nc-zQi" firstAttribute="leading" secondItem="sg9-Ws-uBC" secondAttribute="leadingMargin" id="cRF-VC-e0y"/>
@@ -357,6 +403,7 @@
                         <outlet property="contentTextView" destination="MPu-wA-5so" id="zLi-Sj-lJA"/>
                         <outlet property="contentWarningButton" destination="O8S-Yu-taQ" id="ecO-ho-29a"/>
                         <outlet property="contentWarningTextField" destination="SGu-nc-zQi" id="hfi-fs-evj"/>
+                        <outlet property="imageCollectionView" destination="sG3-Sg-bvW" id="77c-dK-fVT"/>
                         <outlet property="notSafeForWorkButton" destination="OpX-fa-CDa" id="htv-fv-3Yh"/>
                         <outlet property="privacyButton" destination="baf-0m-Xf6" id="ctz-M0-uxm"/>
                         <outlet property="textCountLabel" destination="4kw-km-b4h" id="NLf-bx-JF4"/>
